--- a/ios-developer.html
+++ b/ios-developer.html
@@ -90,7 +90,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://amswh.avature.net/careers/SendToAFriend?jobId=16364'>Send to a friend - Senior iOS Developer - External Careers</a></h5> 
+<h5><a href='https://amswh.avature.net/careers/SendToAFriend?jobId=16364'>Send to a friend - Senior iOS Developer - External Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -104,7 +104,7 @@
 Vision / Computational geometry. GIT version control (good knowledge). English
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/unbabel/8b9b0d1c-283d-4e4c-a68c-fb0b808708f6'>Unbabel - iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/unbabel/8b9b0d1c-283d-4e4c-a68c-fb0b808708f6'>Unbabel - iOS Developer</a></h5> 
 <p><span class="badge badge-light">Lisbon</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -200,7 +200,7 @@ label.</p>
 <p><span class="badge badge-light">San Francisco Santiago San Francisco, California</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/researchinnovations.com/398a7a03-f792-40db-8899-00c6c5042d55'>Research Innovations - iOS Applications Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/researchinnovations.com/398a7a03-f792-40db-8899-00c6c5042d55'>Research Innovations - iOS Applications Developer</a></h5> 
 <p><span class="badge badge-light">Austin, TX Melbourne</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -236,7 +236,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1748895'>Job Application for iOS Developer (m/f/d)  at FREE NOW</a></h5> 
+<h5><a href='https://boards.greenhouse.io/freenow/jobs/1748895'>Job Application for iOS Developer (m/f/d)  at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -268,7 +268,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='https://freelancer.workable.com/j/853DDE858A'>Freelancer.com - Jobs: iOS Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://freelancer.workable.com/j/853DDE858A'>Freelancer.com - Jobs: iOS Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -286,7 +286,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/splunk/job/oFoY9fwU'>Splunk Careers - Senior iOS Developer (IT/Security Markets)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/oFoY9fwU'>Splunk Careers - Senior iOS Developer (IT/Security Markets)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 7, 2019 ... Splunk turns machine data into answers. Organizations use market-leading 
 Splunk solutions with machine learning to solve their toughest IT, Internet of 
